--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-flash": "github:RGBboy/express-flash",
+    "express-recaptcha": "^5.0.2",
     "express-session": "^1.17.2",
     "g": "^2.0.1",
     "mongoose": "^6.1.8",
