--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Vinay",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "ejs": "^3.1.6",
@@ -18,9 +20,11 @@
     "express-recaptcha": "^5.0.2",
     "express-session": "^1.17.2",
     "g": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "validator": "^13.7.0"
   }
 }
